--- a/nemoswarcalc/index.html
+++ b/nemoswarcalc/index.html
@@ -85,7 +85,11 @@
            
             <section class="totalscore">
                 TOTAL SCORE: {{ totalScore }}
+                <br />
+                    <em>{{ victoryLevel }}</em>
+                
             </section>
+            <a class="otherlinks" href="https://gameswithtony.com/nemoswar">Nemo's War Dice Roller</a>
         </section>
     </main>
 </body>
