--- a/nemoswarcalc/index.html
+++ b/nemoswarcalc/index.html
@@ -26,6 +26,11 @@
                     <option value="3">War</option>
                     <option value="4">Adventure</option>
                     <option value="5">Humanist</option>
+                    <optgroup label="-- Unofficial --">
+                        <option value="6">Prince Dakkar</option>
+                        <option value="7">Nemo-Hook</option>
+                        <option value="8">Swashbuckler</option>
+                    </optgroup>
                 </select>
             </section>
             <section class="instructions">
