--- a/kanbanev/index.html
+++ b/kanbanev/index.html
@@ -189,6 +189,8 @@
             </section>
             <section class="extra-info" v-if="this.currentPhase === 1 && (currentPlayer.dept === 1 || currentPlayer.dept === 2) && (this.currentPlayer.engineer === 0 || this.currentPlayer.engineer === 1)">
                 <img v-bind:src="currentPartImage" class="extra-image" />
+                <img v-bind:src="currentTurcziPartImage" class="extra-image" v-if="currentPlayer.dept === 1 && currentPlayer.engineer === 0 && lacerdaIsCertified && !difficultyCards[0].include" />
+                <img v-bind:src="currentTurcziPartImage" class="extra-image" v-if="currentPlayer.dept === 2 && currentPlayer.engineer === 0 && lacerdaIsCertified && !difficultyCards[0].include" />
                 <img v-bind:src="currentCarImage" class="extra-image"  v-if="currentPlayer.dept === 1" />
                 <img v-bind:src="currentKanbanImage" class="extra-image" v-if="currentPlayer.dept === 2 && this.currentPlayer.engineer === 0" />
                 <br />
@@ -221,7 +223,7 @@
             <section class="recycle" v-if="this.isEndOfDay && !this.currentDeptCards[0].parts">
                 <strong class="recycle-title">END OF DAY: No Recycle.</strong>
             </section>
-            <section class="recycle" v-if="this.currentPhase === 0 && this.phaseIndex === 3 &&this.currentDeptCards.length > 0 && !this.currentDeptCards[0].parts">
+            <section class="recycle" v-if="this.currentPhase === 0 && this.phaseIndex === 3 && this.currentDeptCards.length > 0 && !this.currentDeptCards[0].parts">
                 <strong class="recycle-title">NOTE: No Recycle will occur at the end of day.</strong>
             </section>
             <section class="recycle" v-if="this.currentPhase === 0 && this.phaseIndex === 3 && this.currentDeptCards.length > 0 && this.currentDeptCards[0].parts">
@@ -234,6 +236,10 @@
                         </div>
                     </section> 
                 </section>
+            </section>
+            <section class="selectionParts" v-if="this.currentPhase === 0 && this.phaseIndex === 3">
+                <strong class="selectionParts-title" style="margin-bottom: 0.5rem;">Selection Part (Mr. Lacerda):&nbsp;&nbsp;<img v-bind:src="currentLacerdaPartImage" class="selectionPart-image" /></strong>
+                <strong class="selectionParts-title">Selection Part (Mr. Turczi):&nbsp;&nbsp;<img v-bind:src="currentTurcziPartImage" class="selectionPart-image" /></strong>
             </section>
             <section class="instructions" v-if="this.currentPhase === 1">
                 <ul class="instructions-list" v-if="currentPlayer.dept === 0 && currentPlayer.engineer === 0">
@@ -327,10 +333,10 @@
                             Once he is certified, he provides an additional Part.
                         </span>
                         <span v-if="lacerdaIsCertified && !difficultyCards[0].include">
-                            <span class="instructions-important">Mr. Lacerda IS CERTIFIED<br /></span>Because he is certified, Mr. Lacerda provides an additional Part.
+                            <span class="instructions-important">Mr. Lacerda IS CERTIFIED<br /></span>Because he is certified, Mr. Lacerda provides an additional Part (above).
                         </span>
                         <span v-if="difficultyCards[0].include">
-                            <span class="instructions-important">Difficulty Card #1: Certified Lacerda<br /></span>Mr. Lacerda provides an additional Part.
+                            <span class="instructions-important">Difficulty Card #1: Certified Lacerda<br /></span>Mr. Lacerda provides an additional Part (above).
                         </span>
                     </li>
                     <li v-if="difficultyCards[1].include">
@@ -403,10 +409,10 @@
                             Once he is certified, he takes an additional Part.
                         </span>
                         <span v-if="lacerdaIsCertified && !difficultyCards[0].include">
-                            <span class="instructions-important">Mr. Lacerda IS CERTIFIED<br /></span>Because he is certified, Mr. Lacerda collects parts again.
+                            <span class="instructions-important">Mr. Lacerda IS CERTIFIED<br /></span>Because he is certified, Mr. Lacerda collects parts again (see Part above).
                         </span>
                         <span v-if="difficultyCards[0].include">
-                            <span class="instructions-important">Difficulty Card #1: Certified Lacerda<br /></span>Mr. Lacerda takes an additional Part.
+                            <span class="instructions-important">Difficulty Card #1: Certified Lacerda<br /></span>Mr. Lacerda collects parts again (see Part above).
                         </span>
                     </li>
                     <li v-if="difficultyCards[1].include">
