Cart part clarity

--- a/kanbanev/index.html
+++ b/kanbanev/index.html
@@ -193,7 +193,7 @@
                 <img v-bind:src="currentTurcziPartImage" class="small-image" v-if="currentPlayer.dept === 1 && currentPlayer.engineer === 0 && lacerdaIsCertified && !difficultyCards[0].include" />
                 <img v-bind:src="currentTurcziPartImage" class="small-image" v-if="currentPlayer.dept === 2 && currentPlayer.engineer === 0 && lacerdaIsCertified && !difficultyCards[0].include" />
                 <img v-bind:src="currentLacerdaPartImage" class="small-image" v-if="(currentPlayer.dept === 2 && currentPlayer.engineer === 1) || (currentPlayer.dept === 2 && currentPlayer.engineer === 0 && !lacerdaIsCertified && !difficultyCards[0].include)" />
-                <img v-bind:src="currentCarImage" class="extra-image"  v-if="currentPlayer.dept === 1" />
+                <img v-bind:src="currentCarImage" class="extra-image" v-if="currentPlayer.dept === 1"  style="margin-left: 1rem; border-left: dashed 1px black; padding-left: 0.5rem;" />
                 <br />
                 <a href="#" class="draw-part" v-on:click="drawPart">Draw Another Part</a>
             </section>          
