Added other unofficial

--- a/nemoswarcalc/index.html
+++ b/nemoswarcalc/index.html
@@ -30,6 +30,7 @@
                         <option value="6">Prince Dakkar</option>
                         <option value="7">Nemo-Hook</option>
                         <option value="8">Swashbuckler</option>
+                        <option value="9">Anti-Colonialism</option>
                     </optgroup>
                 </select>
             </section>
