--- a/eliza/index.html
+++ b/eliza/index.html
@@ -17,7 +17,9 @@
     <title>Eliza - Brass: Birmingham Solo Mode</title>
 </head>
 <body>
-    
+    <main id="eliza">
+        
+    </main>
 </body>
 <script src="data.js"></script>
 <script src="app.js"></script>
