On Mars turn order spaces references

--- a/onmars/index.html
+++ b/onmars/index.html
@@ -395,6 +395,35 @@
                     </ol>
                 </section>
             </section>
+            <section class="rule rule--standard">
+                <section class="rule-entry" v-if="showLacerdaRules">
+                    <h2>LACERDA: Turn Order Space Benefits</h2>
+                    <section class="turn-order-space-benefits">
+                        <ul>
+                            <li class="turn-order-space-benefit">
+                                <img src="images/turnorderspace1.png" class="turn-order-space-benefit-image" />
+                                <p>Lacerda takes whatever there is the most of. In case of a tie, he takes the leftmost one (Crystals first). Any Resources taken are placed into the general supply.</p>
+                            </li>
+                            <li class="turn-order-space-benefit">
+                                <img src="images/turnorderspace2.png" class="turn-order-space-benefit-image" />
+                                <p>Lacerda takes a Tech tile as as described under "Learn New Technology".</p>
+                            </li>
+                            <li class="turn-order-space-benefit">
+                                <img src="images/turnorderspace3.png" class="turn-order-space-benefit-image" />
+                                <p>Since Lacerda always has all the Colonists he needs, instead he moves his Rover.</p>
+                            </li>
+                            <li class="turn-order-space-benefit">
+                                <img src="images/turnorderspace4.png" class="turn-order-space-benefit-image" />
+                                <p>Move Lacerda’s Bot.</p>
+                            </li>
+                            <li class="turn-order-space-benefit">
+                                <img src="images/turnorderspace5.png" class="turn-order-space-benefit-image" />
+                                <p>Lacerda takes a Blueprint as described under "Obtain Blueprint".</p>
+                            </li>
+                        </ul>
+                    </section>
+                </section>
+            </section>
         </section>
         <section style="text-align: center; padding-bottom: 30px;" v-if="gameHasNotStarted">
             *Not affiliated with Eagle-Gryphon games.
