--- a/kanbanev/index.html
+++ b/kanbanev/index.html
@@ -502,7 +502,7 @@
                     <li>Advance once on the training track (you should end up on the spot indicated above).</li>
                     <li>Take 2 Design tiles (see above for column to use).</li>
                     <li>Upgradeable design tiles are placed at the bottom of the Colleagues' shared design stack.</li>
-                    <li>Non-upgradeable design tiles are returned to the bottom of the Central Stack and the Colleagues score 2 PP each.</li>
+                    <li>Non-upgradeable design tiles are returned to the bottom of the Central Stack and the Colleagues score 2 PP per each tile returned.</li>
                     <li v-if="difficultyCards[1].include">
                         <span class="instructions-important">Difficulty Card #2: Cushy Speech<br /></span>Speech tokens acquired by {{ currentPlayerName }} (in Assembly and at the top of training tracks) score 2 PP instead of 1 PP.
                     </li>
