--- a/eliza/index.html
+++ b/eliza/index.html
@@ -55,7 +55,7 @@
                 </select>
             </div>
             <br />
-            <button class="button" v-on:click="startGame">Start Game</button>
+            <button class="button" v-on:click="startGame">Proceed to Setup</button>
         </section>
         <section class="playerArea" v-if="gameHasStarted">
             <section class="start-new">
@@ -92,21 +92,24 @@
                 <button class="button">Next >></button>
             </section>
             <section class="boardstate" v-if="showBoardState">
-                <h2>Board State</h2>
-                <a href="#" v-on:click="toggleShowBoardState">(X) Close</a>
-                <p>"X :" - a space with an industry tile</p>
-                <p>"-->" - a link tile</p>
+                <a href="#" class="boardstate_close" v-on:click="toggleShowBoardState">[ Close Board State ]</a>
+                <p class="boardstate__instructions">"X :" - a space with an industry tile</p>
+                <p class="boardstate__instructions">"-->" - a link tile</p>
+                <p class="boardstate__marketspaces">
+                    Coal Spaces Open in Market: {{ totalEmptyMarketCoalSpaces }}<br />
+                    Iron Spaces Open in Market: {{ totalEmptyMarketIronSpaces }}
+                </p>
                 <ul class="boardstate__locations">
                     <li class="boardstate__location" v-for="location in board.locations" :key="location.id">
-                        {{ location.name }}
+                        <p class="boardstate__locationname">{{ location.name }}</p>
                         <ul class="boardstate__industrytiles">
                             <li v-for="space in findSpacesWithTiles(location.spaces)" :key="location.id">
-                                <p v-if="space.tile">{{ space.id + 1 }} : [{{ colorString(space.tile.color) }}] {{ boardIndustryTileToStringWithResources(location.id, space.tile.id) }}</p>
+                                <p v-if="space.tile">{{ space.id + 1 }} : {{ colorString(space.tile.color) }} | {{ boardIndustryTileToStringWithResources(location.id, space.tile.id) }}</p>
                             </li>
                         </ul>
                         <ul class="boardstate__adjacentlocations">
                             <li v-for="adjacentLocation in reportAdjacentLocations(location.id)" :key="location.id">
-                                <p>--> {{ adjacentLocation.name }}</p>
+                                <p class="boardstate__adjacentlocation">--> {{ adjacentLocation.name }} ({{ adjacentLocation.colorString }})</p>
                             </li>
                         </ul>
                     </li>
